--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>MÚSICAS</title>
         <meta charset="utf-8">
-        <link rel="icon" href="imagens/mat_musica3.jpg"type ="image/jpg">
+        <link rel="icon" href="mat_musica3.jpg"type ="image/jpg">
         <!--api do google fontes-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,27 +53,27 @@
                      </td>
                      <td>
                         <audio controls>  
-                            <source src="musicas/Deus do deuses.mp3" type="audio/mp3">
+                            <source src="Deus do deuses.mp3" type="audio/mp3">
                         </audio>
                     </td>
                 </tr>  
                 <tr>
                     <td>
-                        <img src="imagens/LAURIETE.JPG" alt="foto_lauriete">     
+                        <img src="LAURIETE.JPG" alt="foto_lauriete">     
                      </td> 
                       <td>
                         <a href="https://pt.wikipedia.org/wiki/Lauriete" target="_blank">Lauriete -IgualNãoHá </a>
                      </td>
                      <td>
                         <audio controls>  
-                            <source src="musicas/Igual Não Há.mp3" type="audio/mp3">
+                            <source src="Igual Não Há.mp3" type="audio/mp3">
                         </audio>
                     </td>
 
                 </tr> 
                 <tr>
                     <td>
-                        <img src="imagens/Vanilda Bordieri.jpg" alt="foto_Vanilda_Bordieri ">   
+                        <img src="Vanilda Bordieri.jpg" alt="foto_Vanilda_Bordieri ">   
                      </td> 
                       <td>
                         
@@ -81,7 +81,7 @@
                         </td>
                         <td>
                         <audio controls>  
-                            <source src="musicas/Viverei Milagres.mp3" type="audio/mp3">Vanilda_Bordieri
+                            <source src="Viverei Milagres.mp3" type="audio/mp3">Vanilda_Bordieri
                         </audio>
                     </td>
                 </tr>                   
