--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="imagens/Lauriete 2.jpg" alt="foto_lauriete">     
+                        <img src="Lauriete 2.jpg" alt="foto_lauriete">     
                      </td> 
                      <td>
                         <a href="https://pt.wikipedia.org/wiki/Lauriete" target="_blank">Lauriete-Deus dos deuses</a>
